--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <!-- Stylesheet -->
-    <link rel="stylesheet" type="style.css" />
+    <link rel="stylesheet" type="STYLE.CSS" />
   </head>
   <body>
     <div class="card">
