--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Google Font-->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
-      rel="stylesheet"
+      rel="stylesheet" href="css"
     />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="STYLE.CSS" />
