--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="back"></div>
       </div>
       <div class="inside">
-        <p>hoallooo~~ birthday girl happy birthday yak dek shavelle always keep that smile on your face yoooww
+        <p>hoallooo birthday girl~~ happy birthday penn-penn always keep your smile on your face yoooww
             kira-kira ada present gak yaaaa buat penn??? HAHAHAHA tunggu pulang kalii??? (ps:baleknya kurang lama sih)
         </p>
         <h1>&#127873;</h1>
